<resources>
    <string name="app_name">Tutor Up</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignup">Sign Up</string>
    <string name="btnReg">Register</string>
    <string name="contentDescription">image</string>
    <string name="lblEmail">Email :</string>
    <string name="txtEmail"></string>
    <string name="lblPass">Password :</string>
    <string name="txtPass"></string>
    <string name="lblName">Name :</string>
    <string name="lblConPass">Confirm Password :</string>
    <string name="txtName"></string>
    <string name="txtEmail2"></string>
    <string name="txtPass2"></string>
    <string name="txtConfPass"></string>
    <string name="radHS">High School</string>
    <string name="radPS">Post Secondary</string>
    <string name="lblFee">Fee (per hour) :</string>
    <string name="radBA">Bachelor\'s</string>
    <string name="radMA">Master\'s</string>
    <string name="radPH">PhD</string>
    <string-array name="coursesgroup">
        <item>Computer Science</item>
        <item>Chemistry</item>
        <item>Mathematics</item>
    </string-array>
    <string name="btnHire">Hire</string>
    <string name="txtInfo"></string>
    <string name="txtRate">Know this tutor?\nRate them now!</string>
    <string name="txtTutName"></string>
    <string name="lblBackground"></string>
    <string name="deactivate">DEACTIVATE</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string></resources>