<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hire">

    <TextView
        android:id="@+id/txtRate"
        android:layout_width="281dp"
        android:layout_height="146dp"
        android:background="#AA8CD8"
        android:gravity="center_horizontal"
        android:paddingTop="10sp"
        android:text="@string/txtRate"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHire" />

    <TextView
        android:id="@+id/txtBackground"
        android:layout_width="290dp"
        android:layout_height="190dp"
        android:background="#AA8CD8"
        android:text="@string/lblBackground"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgClass"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/btnHire"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:background="#AA8CD8"
        android:text="@string/btnHire"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBackground"
        app:layout_constraintVertical_bias="0.098" />

    <ImageView
        android:id="@+id/imgClass"
        android:layout_width="203dp"
        android:layout_height="194dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/classroom" />

    <TextView
        android:id="@+id/txtTutName"
        android:layout_width="254dp"
        android:layout_height="38dp"
        android:gravity="center_horizontal"
        android:text="@string/txtTutName"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtBackground" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="245dp"
        android:layout_height="96dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtInfo"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtRate"
        app:layout_constraintVertical_bias="0.696" />


</androidx.constraintlayout.widget.ConstraintLayout>