<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imgbg2"
        android:layout_width="363dp"
        android:layout_height="460dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aa8cd8" />

    <ImageView
        android:id="@+id/imgbg1"
        android:layout_width="363dp"
        android:layout_height="460dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/aa8cd8" />

    <TextView
        android:id="@+id/lblConPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:text="@string/lblConPass"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass2" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <EditText
        android:id="@+id/txtConfPass"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtConfPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblConPass" />

    <TextView
        android:id="@+id/lblEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="268dp"
        android:layout_marginRight="268dp"
        android:text="@string/lblEmail2"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail2"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtEmail2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail2" />

    <TextView
        android:id="@+id/lblPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:text="@string/lblPass2"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail2" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="268dp"
        android:layout_marginRight="268dp"
        android:text="@string/lblName"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPass2"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtPass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPass2" />

    <Button
        android:id="@+id/btnSignup2"
        android:layout_width="237dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:background="#AA8CD8"
        android:text="@string/btnSignup2"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radEdu" />

    <RadioGroup
        android:id="@+id/radEdu"
        android:layout_width="286dp"
        android:layout_height="91dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfPass">

        <RadioButton
            android:id="@+id/radHS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radHS"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/radPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radPS"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>