<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="340dp"
        android:layout_height="525dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#AA8CD8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblName2"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="268dp"
                android:layout_marginRight="268dp"
                android:paddingLeft="20dp"
                android:text="@string/lblName"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/txtName2"
                android:layout_width="281dp"
                android:layout_height="47dp"
                android:layout_marginLeft="25dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblEmail3"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="268dp"
                android:layout_marginRight="268dp"
                android:paddingLeft="20dp"
                android:text="@string/lblEmail"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/txtEmail3"
                android:layout_width="281dp"
                android:layout_height="47dp"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblFee"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="268dp"
                android:layout_marginRight="268dp"
                android:paddingLeft="20dp"
                android:text="@string/lblFee"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/txtFee"
                android:layout_width="281dp"
                android:layout_height="47dp"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/lblPass3"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="268dp"
                android:layout_marginRight="268dp"
                android:paddingLeft="20dp"
                android:text="@string/lblPass"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/txtPass3"
                android:layout_width="281dp"
                android:layout_height="47dp"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/lblConPass2"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="268dp"
                android:layout_marginRight="268dp"
                android:paddingLeft="20dp"
                android:text="@string/lblConPass"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/txtConfPass2"
                android:layout_width="281dp"
                android:layout_height="47dp"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/spnGroup"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:entries="@array/coursesgroup"
                android:scrollbarSize="15dp"
                android:spinnerMode="dropdown" />

            <RadioGroup
                android:id="@+id/radDegree"
                android:layout_width="340dp"
                android:layout_height="105dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/radBA"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/radBA"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp" />

                <RadioButton
                    android:id="@+id/radMA"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/radMA"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp" />

                <RadioButton
                    android:id="@+id/radPH"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/radPH"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnRegister2"
        android:layout_width="237dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="#AA8CD8"
        android:text="@string/btnReg"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>